# diabric

./: CHANGELOG.txt  README.md  setup.cfg  setup.py
diabric/: __init__.py  config.py  ec2.py  files.py  pyapp.py  vagrant.py  venv.py
fabutil/: __init__.py
tests/: test.py  test_vagrant.py
