[metadata]
name = fabutil
version = 0.1.0
summary = Fabric tasks and other code for deploying web applications, working with ec2, configuring machines, configuring and working with servers (e.g. nginx), etc.
download_url = UNKNOWN
home_page = github.com/todddeluca/fabutil
author = Todd Francis DeLuca
author_email = todddeluca@yahoo.com
classifier = License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
requires_dist = 
    fabric

[files]
packages = fabutil


