[metadata]
name = diabric
version = 0.1
summary = Diabolically atomic Fabric tasks and utilities.
description = This project contains 
              small, useful fabric tasks, functions, etc., for deploying web 
              applications, working with ec2, configuring machines, configuring 
              and working with servers (e.g. nginx), etc.
download_url = https://github.com/todddeluca/diabric/downloads
home_page = https://github.com/todddeluca/diabric
author = Todd Francis DeLuca
author_email = todddeluca@yahoo.com
classifier = License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
requires-dist = 
    fabric
    boto

[files]
packages = diabric


