[metadata]
name = diabric
version = 0.1
license = MIT
summary = Diabolically atomic Python Fabric fabfile tasks and utilities.
description-file = README.md
keywords = fabric fabfile boto ec2 virtualenv python wsgi webapp deployment
home_page = https://github.com/todddeluca/diabric
author = Todd Francis DeLuca
author_email = todddeluca@yahoo.com
classifier = 
    License :: OSI Approved :: MIT License
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
requires-dist = 
    Fabric
    boto
requires-python = 2.7

[files]
packages = 
    diabric
    tests
extra_files = 
    README.md
    LICENSE.txt

